# applied-soft-comp

./: .buildinfo  .gitignore  .nojekyll  AGENTS.md  CLAUDE.md  README.md  convert_margin_to_callout.py  genindex.html  home.html  index.html  main.py  objects.inv  progress.txt  pyproject.toml  robots.txt  search.html  search.json  searchindex.js  sitemap.xml  toc.html
.claude/: settings.json
.obsidian/: appearance.json  community-plugins.json  workspace.json
Excalidraw/: diagram_v1.excalidraw  diagram_v2.excalidraw  diagram_v3.excalidraw  diagram_v4.excalidraw  diagram_v5.excalidraw  diagram_v6.excalidraw  diagram_v7.excalidraw  outline.md  prd.json  progress.txt  prompt.md  prototype.excalidraw  ralph.sh  review_v1.md  review_v2.md  review_v3.md  review_v4.md  review_v5.md  review_v6.md  review_v7.md
_sources/: home.md
_static/: react-components.es.js  react-components.iife.js
course/: about.html  deliverables.html  discord-bot-usage.html  discord.html  setup.html  sprint-project-datasets.html  sprint-project.html  welcome.html  why-applied-soft-computing.html
intro/: deliverables.html  setup.html  why-applied-soft-computing.html  why-networks.html  zoo-of-networks.html
m01-toolkit/: data-provenance.html  git-github.html  overview.html  reproduceability.html  tidy-data.html
m01-word-embedding/: bias-in-embedding.html  doc2vec.html  pen-and-paper.html  sem-axis.html  summary.html  tf-idf.html  what-to-learn.html  word2vec.html  word2vec_plus.html
m02-doc-embedding/: attention.html  doc2vec.html  lstm.html  reccurrent-neural-net.html  seq2seq.html  transformers.html  what-to-learn.html
m02-language-model/: attention.html  lstm.html  reccurrent-neural-net.html  seq2seq.html  transformers.html  what-to-learn.html
m02-recurrent-neural-network/: attention.html  elmo.html  example-round.html  lstm.html  memory-challenge.html  memory-passing-game.html  pen-and-paper.html  reccurrent-neural-net.html  rnn-interactive.html  rnn-mapping-challenge.html  seq2seq.html  summary.html  what-to-learn.html
m02-visualization/: 1d-data.html  2d-data.html  dimensionality-reduction.html  highd-data.html  networks.html  overview.html  principles.html  sprint-project.html  time-series.html
m03-agentic-coding/: agentic-ai.html  context-engineering.html  exercise.html  hands-on.html  overview.html  prompt-tuning.html  sprint-project.html
m03-image-processing/: appendix.html  from-image-to-graph.html  graph-convolutional-network.html  image-processing.html  pen-and-paper.html  popular-gnn.html  what-to-learn.html
m03-transformers/: appendix-t5.html  bert.html  from-language-model-to-instruction-following.html  gpt.html  instruction-fine-tuning.html  prompt-tuning-exercise.html  prompt-tuning-link.html  prompt-tuning.html  sentence-bert.html  summary.html  t5.html  (+2 more)
tmp/: README.md  (+6 more)
(+928 files in other folders)
