[project]
name = "applsoftcomp"
version = "0.1.0"
description = "Project description"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Sadamori Kojaku"},
]
license = {file = "LICENSE"}

dependencies = [
    "numpy>=1.20.0",
    "numba>=0.56.0",
    "pandas>=1.3.0",
    "snakemake",
    "pulp>=2.6.0,<2.7.0",
    "scipy",
    "matplotlib",
    "seaborn",
    "tqdm",
    "rich",
    "marimo>=0.16.1",
    "google-genai>=1.38.0",
    "scikit-learn>=1.0.0",
    "nvitop>=1.5.3",
    "ipywidgets>=8.1.7",
    "python-igraph>=0.11.9",
    "torch-geometric>=2.6.1",
    "torch>=2.8.0",
    "transformers>=4.57.1",
    "ollama>=0.6.1",
    "nbclient>=0.10.2",
    "ipython>=8.18.1",
    "jupyter-cache>=1.0.1",
    "altair>=6.0.0",
    "umap-learn>=0.5.9.post2",
    "gensim>=4.4.0",
    "adjusttext>=1.3.0",
    "blacken-docs>=1.20.0",
    "langgraph>=0.2.60",
    "langchain>=0.3.20",
    "langchain-ollama>=0.2.5",
    "snakefmt>=0.10.3",
    "ipykernel>=7.1.0",
    "isort>=7.0.0",
    "docformatter>=1.7.7",
    "litellm>=1.80.7",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "pandasql>=0.7.3",
    "pytorch-lightning>=2.6.0",
    "torchvision>=0.24.1",
    "bokeh>=3.0.0",
    "requests>=2.31.0",
    "Pillow>=10.0.0",
    "sentence-transformers>=2.2.0",
    "pydantic>=2.0.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "ipykernel",
    "isort",
    "mypy",
    "docformatter",
    "snakefmt",
]

# pyproject.toml
[tool.isort]
profile = "black"

