[project]
name = "applsoftcomp"
version = "0.1.0"
description = "Applied Soft Computing Course Materials"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Sadamori Kojaku"},
]
license = {file = "LICENSE"}

dependencies = [
    # Core data science
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",

    # Visualization
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "bokeh>=3.0.0",
    "altair>=5.0.0",

    # Machine learning
    "scikit-learn>=1.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",

    # NLP
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
    "gensim>=4.3.0",

    # Network analysis
    "networkx>=3.0",
    "python-igraph>=0.11.0",

    # LLM and agentic AI
    "ollama>=0.5.0",
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.0",

    # Utilities
    "requests>=2.31.0",
    "Pillow>=10.0.0",
    "tqdm>=4.65.0",
    "pydantic>=2.0.0",

    # Jupyter
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.isort]
profile = "black"

